--- a/example/package.json
+++ b/example/package.json
@@ -10,6 +10,7 @@
     "build": "parcel build"
   },
   "dependencies": {
+    "prettier": "^2.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-syntax-highlighter": "^15.4.5"
