--- a/example/package.json
+++ b/example/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "parcel",
-    "build": "parcel build"
+    "build": "parcel build",
+    "deploy": "yarn build && surge --project dist/ --domain https://sulky-knife.surge.sh"
   },
   "dependencies": {
     "prettier": "^2.4.1",
